--- a/diamm/templates/website/search/results/source.jinja2
+++ b/diamm/templates/website/search/results/source.jinja2
@@ -1,9 +1,34 @@
-<div>
-    <p class="upper-info">
-        {{ result.archive_s }}, {{ result.archive_city_s }} 
-    </p>
+<div class="search-result-description">
+    {{ result.surface_type_s if result.surface_type_s else "" }}
 
-    <p class="lower-info">
-    {{ result.source_type_s }}, {{ result.date_statement_s }}</p>
+    {{ result.source_type_s }}, {{ result.date_statement_s }}
+
+    {{ result.measurements_s if result.measurements_s else "" }}
+
+    {{ result.archive_s }}, {{ result.archive_city_s }}
+
+    Inventory contains {{ result.number_of_composers_i }} composers with {{ result.number_of_compositions_i }} compositions.
+
+    {% if result.identifiers_ss %}
+        Other identifiers:
+        {% for ident in result.identifiers_ss %}
+            {{ ident }}
+        {% endfor %}
+    {% endif %}
+
+    {% if result.notations_ss %}
+        Notations:
+        {% for notation in result.notations_ss %}
+            {{ notation }}
+        {% endfor %}
+    {% endif %}
+
+    {% if result.sets_ssni %}
+        Part of sets:
+        {% for s in result.sets_ssni %}
+            {% set slist = s.split("|") %}
+            <a href="{{ url('set-detail', pk=slist[0]) }}">{{ slist[1] }}</a>
+        {% endfor %}
+    {% endif %}
 </div>
 
