Fixed: Add name back to archive serializer
Not sure how that disappeared...

--- a/diamm/templates/website/blocks/front_hero.jinja2
+++ b/diamm/templates/website/blocks/front_hero.jinja2
@@ -1,5 +1,9 @@
-<img src="https://placehold.it/1400x300" alt="..." class="u-full-width">
+{#<img src="https://placehold.it/1400x500" alt="..." class="u-full-width">#}
 
+<div class="front-hero">
+    <img src="https://beta.diamm.ac.uk/images/54108/800,7300,1800,500/512,/0/default.jpg" class="u-full-width">
+    {% include "website/blocks/search_box.jinja2" %}
+</div>
 {# <div id="diamm-carousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#diamm-carousel" data-slide-to="0" class="active"></li>
