New: Cover images
This commit adds cover image functionality to source views.

If a cover image is set for a source it will always display that. If one is not set, it will choose a random page and display that. Both will display with the folio / page information.

--- a/diamm/templates/website/source/source_detail_block.jinja2
+++ b/diamm/templates/website/source/source_detail_block.jinja2
@@ -138,8 +138,9 @@
         {% endif %}
     </div>
     <div class="five columns">
-        {% if content.cover_image_url %}
-            <img src="{{ content.cover_image_url }}/full/350,/0/default.jpg" class="u-full-width"/>
+        {% if content.cover_image_info %}
+            <img src="{{ content.cover_image_info.url }}/full/350,/0/default.jpg" class="u-full-width"/>
+            <p>Folio {{ content.cover_image_info.label }}</p>
         {% endif %}
         {#
         <h4>Private Notes</h4>
