--- a/diamm/templates/website/blocks/search_box.jinja2
+++ b/diamm/templates/website/blocks/search_box.jinja2
@@ -1,7 +1,7 @@
 <div class="search-box">
     <div class="container">
         <div class="row">
-            <div class="fourteen columns offset-by-two">
+            <div class="twelve columns offset-by-four">
                 <form action="{{ url('search') }}" method="get">
                     <input type="search" class="u-full-width" autocomplete="on" placeholder="Search" name="q" {% if content.query %}value="{{ content.query }}"{% endif %} />
                 </form>
