--- a/diamm/static/stylesheets/_navbar.scss
+++ b/diamm/static/stylesheets/_navbar.scss
@@ -4,9 +4,8 @@
 }
 
 .navbar {
-  box-shadow: 0px 0px 4px 2px $diamm-med-grey;
+  box-shadow: 0 0 4px 0 $diamm-black;
   border-top: 5px solid $diamm-red;
-  margin-bottom: 1rem;
   &:before,
   &:after {
     content: " "; // 1
