--- a/diamm/templates/website/organization/organization_detail.jinja2
+++ b/diamm/templates/website/organization/organization_detail.jinja2
@@ -1,5 +1,49 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <h1>Organization Detail</h1>
+    <div class="row">
+        <div class="sixteen columns">
+            <h1>{{ content.name }}</h1>
+            {% if content.location %}
+                <h2><a href="{{ content.location.url }}">{{ content.location.name }}</a></h2>
+            {% endif %}
+
+            {% if content.source_provenance %}
+                <h3>Source Provenance Entries</h3>
+                <ul>
+                {% for entry in content.source_provenance %}
+                    <li><a href="{{ entry.url }}">{{ entry.source }}</a></li>
+                {% endfor %}
+                </ul>
+            {% endif %}
+
+            {% if content.related_sources %}
+                <h3>Related Sources</h3>
+                <ul>
+                {% for entry in content.related_sources %}
+                    <li>
+                        {{ "?" if entry.uncertain else "" }}
+                        <a href="{{ entry.url }}">
+                            {{ entry.source }}
+                        </a> ({{ entry.relationship }})
+                    </li>
+                {% endfor %}
+                </ul>
+            {% endif %}
+
+            {% if content.copied_sources %}
+                <h3>Copied Sources</h3>
+                <ul>
+                {% for entry in content.copied_sources %}
+                    <li>
+                        {{ "?" if entry.uncertain else "" }}
+                        <a href="{{ entry.url }}">
+                            {{ entry.source }}
+                        </a> ({{ entry.type }})
+                    </li>
+                {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+    </div>
 {% endblock %}
