--- a/diamm/templates/website/source/source_detail.jinja2
+++ b/diamm/templates/website/source/source_detail.jinja2
@@ -74,7 +74,7 @@
         </div>
         <div class="row">
             <div class="sixteen columns">
-                {% set contributions = contribution_source_sort(content.display_name) %}
+                {% set contributions = contribution_sort(content.shelfmark) %}
                 {% include 'website/contribution/contribution_display.jinja2' %}
             </div>
         </div>
