--- a/diamm/templates/website/source/source_detail.jinja2
+++ b/diamm/templates/website/source/source_detail.jinja2
@@ -30,7 +30,7 @@
                 <li><a class="tab" href="#inventory">Inventory</a></li>
                 {% endif %}
 
-                {% if content.public_images and user.is_authenticated() %}
+                {% if content.public_images %}
                 <li><a class="tab" href="#images">Images</a></li>
                 {% endif %}
 
@@ -56,7 +56,7 @@
             {% include "website/source/source_inventory_block.jinja2" %}
             {% endif %}
 
-            {% if content.public_images and user.is_authenticated() %}
+            {% if content.public_images %}
             {% include "website/source/source_images_block.jinja2" %}
             {% endif %}
 
