--- a/diamm/templates/aboutpages_menu.jinja2
+++ b/diamm/templates/aboutpages_menu.jinja2
@@ -1,6 +1,6 @@
 {% set pages, subpages = aboutpages_list() %}
 
- <ul class="column">
+ <ul class="about-menu-column">
      <div>
          {% for page in pages  %}
              <li><a href="{{ page.url }}">{{ page }}</a>
