--- a/diamm/static/stylesheets/_navbar.scss
+++ b/diamm/static/stylesheets/_navbar.scss
@@ -60,7 +60,7 @@
       }
     }
 
-    .column {
+    .about-menu-column {
       display: none;
       position: absolute;
       list-style-type: none;
@@ -73,23 +73,23 @@
 
     }
 
-    .column div {
+    .about-menu-column div {
       -webkit-column-count: 3;
       -moz-column-count: 3;
       column-count: 3;
     }
-    .column a {
+    .about-menu-column a {
       display: block;
       margin-top: 0rem;
       margin-left: 0.2rem;
       padding-left: 0rem;
       font-size: 0.7rem;
     }
-    .column ul {
+    .about-menu-column ul {
       margin-left: 0.2rem;
     }
 
-    .column li {
+    .about-menu-column li {
       margin-right: 0rem;
     }
 
@@ -107,7 +107,7 @@
       display: block;
     }
 
-    .navbar-item:hover .column {
+    .navbar-item:hover .about-menu-column {
       display: block;
     }
 
