WIP: adding image icons next to sources with images
added to set detail and composition detail

--- a/diamm/static/stylesheets/styles.scss
+++ b/diamm/static/stylesheets/styles.scss
@@ -33,6 +33,10 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+li.image-source-list {
+  list-style-type: none;
+}
+
 ul.contribution-list {
   li {
     list-style-type: none;
