WIP: using non-minified diva

--- a/diamm/templates/website/source/source_detail.jinja2
+++ b/diamm/templates/website/source/source_detail.jinja2
@@ -77,9 +77,10 @@
 
 {% block scripts %}
     <script src="{{ static('javascripts/lib/jquery/jquery.min.js') }}" type="application/javascript"></script>
-    <script src="{{ static('javascripts/lib/diva.js/js/diva.min.js') }}" type="application/javascript"></script>
+    <script src="{{ static('javascripts/lib/diva.js/js/diva.js') }}" type="application/javascript"></script>
     <script src="{{ static('javascripts/lib/diva.js/js/utils.js') }}" type="application/javascript"></script>
     <script src="{{ static('javascripts/lib/iiif-page-data.js') }}" type="application/javascript"></script>
+    <script src="{{ static('javascripts/lib/iiif-structure.js') }}" type="application/javascript"></script>
     <script src="{{ static('javascripts/lib/tabs.js') }}" type="application/javascript"></script>
     <script type="application/javascript">
         $(document).ready(function()
