Style changes for item viewer #47

--- a/diamm/static/stylesheets/_source.scss
+++ b/diamm/static/stylesheets/_source.scss
@@ -129,3 +129,16 @@
 .diva-tools form {
   margin-bottom: 0;
 }
+
+#image-item-listing {
+  p {
+    margin-bottom: 0;
+  }
+  ul {
+      margin-left: 1em;
+      list-style-type: none;
+  }
+  li {
+    margin: 0 0;
+  }
+}
