--- a/diamm/static/stylesheets/styles.css
+++ b/diamm/static/stylesheets/styles.css
@@ -2960,6 +2960,16 @@ footer {
 .diva-tools form {
   margin-bottom: 0; }
 
+#image-item-listing p {
+  margin-bottom: 0; }
+
+#image-item-listing ul {
+  margin-left: 1em;
+  list-style-type: none; }
+
+#image-item-listing li {
+  margin: 0 0; }
+
 .search-box {
   background: #dddede; }
   .search-box form {
