Hides scrollbar when not neccessary #47

--- a/diamm/static/stylesheets/styles.css
+++ b/diamm/static/stylesheets/styles.css
@@ -2998,7 +2998,9 @@ footer {
 
 #image-item-listing {
   max-height: 770px;
-  overflow: scroll; }
+  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: auto; }
   #image-item-listing p {
     margin-bottom: 0; }
   #image-item-listing ul {
