--- a/diamm/static/stylesheets/_source.scss
+++ b/diamm/static/stylesheets/_source.scss
@@ -133,6 +133,8 @@
 #image-item-listing {
   max-height: 770px;
   overflow: scroll;
+  overflow-y: auto;
+  overflow-x: auto;
   p {
     margin-bottom: 0;
   }
