added image icons in archives and people
added image icons next to sources that have images in source lists that appear in archives and people.

--- a/diamm/templates/website/archive/archive_detail.jinja2
+++ b/diamm/templates/website/archive/archive_detail.jinja2
@@ -12,7 +12,12 @@
             <h3>Sources in this Archive</h3>
             <ul>
                 {% for source in content.sources %}
-                    <li><a href="{{ source.url }}">{{ source.display_name }}</a></li>
+                    <li class="image-source-list">
+                        {% if source.has_images and source.public_images %}
+                            <i class="fa fa-picture-o" aria-hidden="true"></i>
+                        {% endif %}
+                        <a href="{{ source.url }}">{{ source.display_name }}</a>
+                    </li>
                 {% endfor %}
             </ul>
         </div>
