Fixed: Styling for archive logos
This commit fixes a broken stylesheet for sources, and also styles the archive logos, constraining the logos in both dimensions.

--- a/diamm/static/stylesheets/_source.scss
+++ b/diamm/static/stylesheets/_source.scss
@@ -138,12 +138,20 @@
     margin-bottom: 0;
   }
   ul {
-      margin-left: 1em;
-      list-style-type: none;
+    margin-left: 1em;
+    list-style-type: none;
   }
   li {
     margin: 0 0;
   }
-#archive-logo {
+}
+
+.archive-header-logo {
+  float: right;
   max-width: 400px;
+  max-height: 100px;
+
+  a:hover {
+    text-decoration: none;
+  }
 }
