Fixed: Change archive logo ID to class

--- a/diamm/templates/website/source/source_detail.jinja2
+++ b/diamm/templates/website/source/source_detail.jinja2
@@ -24,7 +24,7 @@
         </div>
         <div class="four columns">
             <a href="{{ content.archive.url }}">
-                <img src="{{ content.archive.logo }}" id="archive-logo"/>
+                <img src="{{ content.archive.logo }}" class="archive-header-logo"/>
             </a>
         </div>
     </div>
