--- a/diamm/templates/website/source/source_detail.jinja2
+++ b/diamm/templates/website/source/source_detail.jinja2
@@ -91,90 +91,27 @@
     <script src="{{ static('javascripts/lib/jquery/jquery.min.js') }}" type="application/javascript"></script>
     <script src="{{ static('javascripts/lib/diva.js/js/diva.js') }}" type="application/javascript"></script>
     <script src="{{ static('javascripts/lib/diva.js/js/utils.js') }}" type="application/javascript"></script>
-    <script src="{{ static('javascripts/lib/iiif-page-data.js') }}" type="application/javascript"></script>
     <script src="{{ static('javascripts/lib/iiif-structure.js') }}" type="application/javascript"></script>
     <script src="{{ static('javascripts/lib/tabs.js') }}" type="application/javascript"></script>
     <script type="application/javascript">
         $(document).ready(function()
         {
             $("#tabs").tabs({
-                tabCallbacks: {'#images': function()
-                {
-                    var divaObj = $("#diva-wrapper").data('diva');
-                    if (!divaObj)
+                tabCallbacks: {
+                    '#images': function ()
                     {
-                        $('#diva-wrapper').diva({
-                            enableAutoTitle: false,
-                            objectData: "{{ content.manifest_url }}",
-                            enableIIIFPageData: true,
-                            enableIIIFStructure: true,
-                        });
-                    }
-                }}
-            });
-
-            diva.Events.subscribe("VisiblePageDidChange", function(pageIndex, filename)
-            {
-            });
-
-
-            diva.Events.subscribe('IIIFPageDataDidLoad', function(data)
-            {
-                if (!data)
-                {
-                    return;
-                }
-
-                var itemDisplay = document.getElementById('image-item-listing');
-
-                while (itemDisplay.firstChild)
-                {
-                    itemDisplay.removeChild(itemDisplay.firstChild);
-                }
-
-                var items = data.resources;
-                var docFrag = document.createDocumentFragment();
-
-                for (var i = 0, ilen = items.length; i < ilen; ++i)
-                {
-                    var item = items[i];
-                    var entry = item.resource.chars;
-
-                    var parentDiv = document.createElement("div");
-                    docFrag.appendChild(parentDiv);
-
-                    var compositionPara = document.createElement("p");
-                    var compositionLink = document.createElement("a");
-                    compositionLink.href = entry.composition["@id"];
-                    compositionLink.innerHTML = entry.composition["name"];
-
-                    compositionPara.appendChild(compositionLink);
-                    parentDiv.appendChild(compositionPara);
-
-                    var composers = entry.composers;
-                    for (var j = 0, clen = composers.length; j < clen; j++)
-                    {
-                        var composer = composers[j];
-                        console.log(composer);
-
-                        var composerName = composer["name"];
-
-                        if (composer.uncertain === true)
+                        var divaObj = $("#diva-wrapper").data('diva');
+                        if (!divaObj)
                         {
-                            composerName = "?" + composerName;
+                            $('#diva-wrapper').diva({
+                                enableAutoTitle: false,
+                                objectData: "{{ content.manifest_url }}",
+                                enableIIIFPageData: true,
+                                enableIIIFStructure: true
+                            });
                         }
-
-                        var composerPara = document.createElement("p");
-                        var composerLink = document.createElement("a");
-                        composerLink.href = composer["@id"];
-                        composerLink.innerHTML = composerName;
-
-                        composerPara.appendChild(composerLink);
-                        parentDiv.appendChild(composerPara);
                     }
                 }
-
-                itemDisplay.appendChild(docFrag);
             });
         });
     </script>
