Fixed: Small adjustments to styling and layout
Tops of pages no longer run into the navbar...

--- a/diamm/static/stylesheets/_front.scss
+++ b/diamm/static/stylesheets/_front.scss
@@ -1,4 +1,8 @@
-$position-adjust: 1em;
+$position-adjust: -1rem;
+
+.front-content {
+  margin-top: $position-adjust;
+}
 
 .front-hero {
   position: relative;
