--- a/diamm/static/stylesheets/_search.scss
+++ b/diamm/static/stylesheets/_search.scss
@@ -20,6 +20,7 @@ $search-input-adjust: $search-font-size + 1rem;
   font-family: $sans-serif;
   font-size: 90%;
   padding: 0.5rem;
+  margin-top: -1rem;
   border-bottom: 1px solid $diamm-light-grey;
   span {
     font-weight: 500;
