--- a/diamm/templates/index.jinja2
+++ b/diamm/templates/index.jinja2
@@ -4,9 +4,8 @@
     {% include "website/blocks/front_hero.jinja2" %}
 {% endblock %}
 
-
 {% block body %}
-    <div class="row">
+    <div class="row front-content">
         <div class="eight columns">
             <h3>News</h3>
             <h4>Lorem ipsum dolor sit amet</h4>
