--- a/diamm/templates/website/blocks/header.jinja2
+++ b/diamm/templates/website/blocks/header.jinja2
@@ -7,7 +7,7 @@
         </ul>
         <ul class="navbar-list pull-left">
                 <li class="navbar-item"><a href="/about/">About</a>
-                    {% include "aboutpages_menu.jinja2" %}
+                    {% include "website/aboutpages/aboutpages_menu.jinja2" %}
                 </li>
             <li class="navbar-item"><a href="{{ url('search') }}">Search</a></li>
         </ul>
